--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
 			<p class='titlefont headCtrl'>■  个人简介</p>
 			<div class='left en'>
 				<ul style='line-height:2em'>	
-				<li ><img src='me.jpg' style='vertical-align:middle;width:100px;height:141px;margin-right:7px'>
+				<li ><img src='images/me.jpg' style='vertical-align:middle;width:100px;height:141px;margin-right:7px'>
 				
 <span style='display:block;height:144px;float:right;width:300px'>
 <pre>
