--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
 			text-decoration:none;
 		}
 		body{
-			/*background-color: #E5E2DF;*/
+		/*	<!--background-color: #E5E2DF;-->*/
 			display: block;
 			width: 1060px;
-			/*box-shadow: 0 0 1em #ddd;*/
+			box-shadow: 0 0 1em #ddd;
 			margin: 0 auto;
 		}
 		h2{
@@ -138,7 +138,7 @@
 			font-size: 24px;
 			font-weight: bolder;
 			width: 300px;
-			/*-webkit-transform:rotate(-25deg);*/
+			-webkit-transform:rotate(-25deg);
 		}
 		.footer{
 			position: relative;
@@ -293,7 +293,7 @@
 			<p class='titlefont headCtrl'>■  个人简介</p>
 			<div class='left en'>
 				<ul style='line-height:2em'>	
-				<li ><img src='images/me.jpg' style='vertical-align:middle;width:100px;height:141px;margin-right:7px'>
+				<li ><img src='me.jpg' style='vertical-align:middle;width:100px;height:141px;margin-right:7px'>
 				
 <span style='display:block;height:144px;float:right;width:300px'>
 <pre>
@@ -398,14 +398,13 @@
 			</div>
 			<div style='width:200px;height:380px;display:inline-block;float:right;'>
 			<div style='width:200px;height:200px;display:inline-block;margin-top:230px;'>
-			
-			<div style='width:175px;height:30px;padding-left:25px;padding-top:20px;display:inline-block;color:#B41117;font-size:16px'>期待与您一起共创未来</div>
+			<!--<img  src="hw.png"style='width:120px;height:100px;margin-left:40px;margin-right:40px;'></img>-->
+			<!--<div style='width:175px;height:30px;padding-left:25px;padding-top:20px;display:inline-block;color:#B41117;font-size:16px'>期待与您一起共创未来</div>-->
 			</div>
 			</div>
 		
 		</div>
 		<div class='footer1'><div class='circle'></div></div>
-		<div style='width:100%;height:10px'></div>
+		<div style='width:100%;height:70px'></div>
 	</body>
 </html>
-
