--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
 			<p class='titlefont headCtrl'>■  个人简介</p>
 			<div class='left en'>
 				<ul style='line-height:2em'>	
-				<li ><img src='me.jpg' style='vertical-align:middle;width:100px;height:141px;margin-right:7px'>
+				<li ><img src='zty_images/me.jpg' style='vertical-align:middle;width:100px;height:141px;margin-right:7px'>
 				
 <span style='display:block;height:144px;float:right;width:300px'>
 <pre>
@@ -301,15 +301,15 @@
 生日：1994.09.05
 民族：汉
 </pre></span></li>
-				<li><img src="4.png" style="vertical-align:middle;height:55px;width:55px;margin-left:10px;margin-right:10px">西安电子科技大学 通信工程学院</li>
+				<li><img src="zty_images/4.png" style="vertical-align:middle;height:55px;width:55px;margin-left:10px;margin-right:10px">西安电子科技大学 通信工程学院</li>
 				
 			</ul>
 			</div >
 			<div class='right'>
 				<ul>
-					<li><img src='phone.png' style='vertical-align:middle;margin-left:12px;margin-right:6px'><span class='en'>18392146307</span></li>
-					<li><img src="mail.png" style='vertical-align:middle;width:60px;margin-left:6px;margin-right:2px;padding-top:3px;padding-bottom:3px;'><span class='en'>tianyu_zh@foxmail.com</span></li>
-					<li><img src="CSDN.png" style="width:50px;vertical-align:middle;margin-left:12px;margin-right:5px"><span class='en'>http://blog.csdn.net/u010466057</span></li>
+					<li><img src='zty_images/phone.png' style='vertical-align:middle;margin-left:12px;margin-right:6px'><span class='en'>18392146307</span></li>
+					<li><img src="zty_images/mail.png" style='vertical-align:middle;width:60px;margin-left:6px;margin-right:2px;padding-top:3px;padding-bottom:3px;'><span class='en'>tianyu_zh@foxmail.com</span></li>
+					<li><img src="zty_images/CSDN.png" style="width:50px;vertical-align:middle;margin-left:12px;margin-right:5px"><span class='en'>http://blog.csdn.net/u010466057</span></li>
 				</ul>	
 			</div>	
 		</div>
