--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
 生日：1994.09.05
 民族：汉
 </pre></span></li>
-				<li><img src="zty_images/4.png" style="vertical-align:middle;height:55px;width:55px;margin-left:10px;margin-right:10px">西安电子科技大学 通信工程学院</li>
+				<li><img src="images/school.jpg" style="vertical-align:middle;height:55px;width:55px;margin-left:10px;margin-right:10px">西安电子科技大学 通信工程学院</li>
 				
 			</ul>
 			</div >
