--- a/index.html
+++ b/index.html
@@ -301,15 +301,15 @@
 生日：1994.09.05
 民族：汉
 </pre></span></li>
-				<li><img src="4.png" style="vertical-align:middle;height:55px;width:55px;margin-left:0px;margin-right:10px">西安电子科技大学 通信工程学院</li>
+				<li><img src="images/4.png" style="vertical-align:middle;height:55px;width:55px;margin-left:0px;margin-right:10px">西安电子科技大学 通信工程学院</li>
 				
 			</ul>
 			</div >
 			<div class='right'>
 				<ul>
-					<li><img src='phone.png' style='vertical-align:middle;margin-left:12px;margin-right:6px'><span class='en'>18392146307</span></li>
-					<li><img src="mail.png" style='vertical-align:middle;width:60px;margin-left:6px;margin-right:2px;padding-top:3px;padding-bottom:3px;'><span class='en'>tianyu_zh@foxmail.com</span></li>
-					<li><img src="CSDN.png" style="width:50px;vertical-align:middle;margin-left:12px;margin-right:5px"><span class='en'>github.com/Tianyu1Zhang</span></li>
+					<li><img src='images/phone.png' style='vertical-align:middle;margin-left:12px;margin-right:6px'><span class='en'>18392146307</span></li>
+					<li><img src="images/mail.png" style='vertical-align:middle;width:60px;margin-left:6px;margin-right:2px;padding-top:3px;padding-bottom:3px;'><span class='en'>tianyu_zh@foxmail.com</span></li>
+					<li><img src="images/CSDN.png" style="width:50px;vertical-align:middle;margin-left:12px;margin-right:5px"><span class='en'>github.com/Tianyu1Zhang</span></li>
 				</ul>	
 			</div>	
 		</div>
@@ -398,8 +398,8 @@
 			</div>
 			<div style='width:200px;height:380px;display:inline-block;float:right;'>
 			<div style='width:200px;height:200px;display:inline-block;margin-top:230px;'>
-			<img  src="hw.png"style='width:120px;height:100px;margin-left:40px;margin-right:40px;'></img>
-			<div style='width:175px;height:30px;padding-left:25px;padding-top:20px;display:inline-block;color:#B41117;font-size:16px'>期待与您一起共创未来</div>
+			<!-- <img  src="hw.png"style='width:120px;height:100px;margin-left:40px;margin-right:40px;'></img> -->
+			<div style='width:175px;height:30px;padding-left:25px;padding-top:120px;display:inline-block;color:#B41117;font-size:16px'>期待与您一起共创未来</div>
 			</div>
 			</div>
 		
